--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 
+svg path,
+svg rect{
+  fill: black;
+}
+
 :root {
     --animate-duration: 1.5s;
     --animate-delay: 1s;
